# regridding-geom-benchmark

./: README.md  regrid_benchmark_utils.h
GCAGCA_intersection/: CMakeLists.txt  README.md  run_gca_gca_analysis.m  test_GCA_GCA.cpp
GCA_Angle_test/: CMakeLists.txt  GCR_angle_perf.cpp  GCR_distance_test.cpp  README.md  generate_arcs.cpp  validate_angle_accuracy.wls
spherical_triangle_test/: CMakeLists.txt  README.md  arpist_quad.cpp  arpist_quad.h  compute_relative_errors.m  decompose_mesh_vertices.cpp  eriksson_area.cpp  eriksson_area.h  generate_ill_triangles.cpp  tempest_quad.cpp  tempest_quad.h  test_oversphere.cpp  triangle_quadrature_rules.cpp  triangle_quadrature_rules.h  yac_quad.cpp  yac_quad.h
tree_benchmark/: README.md  run_benchmark.py
